[project]
name = "linkedin-ads-mcp"
version = "0.1.0"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.2.0",
    "fastmcp>=3.2.0",
]
description = "MCP server for the LinkedIn Marketing API (Ads). Read + write campaigns, analytics, creatives."
readme = "README.md"
authors = [
    { name = "Glitch Executor Labs", email = "founders@glitchexecutor.com" },
]
keywords = ["LinkedIn", "LinkedIn Ads", "Marketing API", "MCP", "Model Context Protocol"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage   = "https://github.com/glitch-exec-labs/linkedin-ads-mcp"
repository = "https://github.com/glitch-exec-labs/linkedin-ads-mcp.git"
issues     = "https://github.com/glitch-exec-labs/linkedin-ads-mcp/issues"

[project.scripts]
linkedin-ads-mcp = "linkedin_ads_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linkedin_ads_mcp"]
