[project]
name = "glitch-grow-linkedin-ad-mcp"
version = "0.1.0"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.2.0",
    "fastmcp>=3.2.0",
]
description = "Glitch Grow LinkedIn Ad MCP — MCP server for the LinkedIn Marketing API. Read + write campaigns, analytics, creatives. Optionally use the hosted Glitch Grow app for instant API access (no Marketing API approval needed)."
readme = "README.md"
authors = [
    { name = "Glitch Executor Labs", email = "founders@glitchexecutor.com" },
]
keywords = ["LinkedIn", "LinkedIn Ads", "Marketing API", "MCP", "Model Context Protocol"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage   = "https://github.com/glitch-exec-labs/glitch-grow-linkedin-ad-mcp"
repository = "https://github.com/glitch-exec-labs/glitch-grow-linkedin-ad-mcp.git"
issues     = "https://github.com/glitch-exec-labs/glitch-grow-linkedin-ad-mcp/issues"

[project.scripts]
glitch-grow-linkedin-ad-mcp = "linkedin_ads_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linkedin_ads_mcp"]
